--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,6 +8,8 @@
 html,body{
     scroll-behavior: smooth !important;
     background-color: var(--background);
+    width: 100%;
+    height: 100%;
     }
     
     html::-webkit-scrollbar{
@@ -46,48 +48,71 @@ form{
 .content-wrapper{
     margin-top: 5rem;
 }
+#navbarContent{
+    background-color: #E9EDC9;
+    padding:0;
+}
+
+.section{
+    min-height: 100vh;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 200px;
+    /* padding-top: 80px;
+    padding-bottom: 80px; */
+}
+.nav-link:hover{
+    background-color: var(--active);
+}
 
 
 
 /* FOR DESKTOP VIEW */
 @media (min-width:992px){
     .navbar{
+        width: 200px;
         min-height: 100vh;
-        width: 240px !important;
-      }
-    .flex-lg-column{
-        min-height: 100vh;
-        margin-top: 5rem;
-        background-color: var(--subcolor);
-        position: relative;
-        padding-left: 0 !important;
-        padding-right: 0 !important;
-        padding-top:0 !important; 
-    }
-    .navbar-brand{
-        /* display: block !important; */
-        position: absolute !important;
-        top: -3.8rem;
-    }
-    #navbarContent{
-        width: 100%;
-        text-align: start;
-        margin: 0;
-        padding: 0;
+        background-color: #E9EDC9 !important;
     }
     .navbar-nav{
         display: flex;
-        gap: 1rem;
-        padding-top: 1rem;
-        margin: 0 !important;
-        text-align: center;
-        width: 100%;
-    }   
-
-    .content-wrapper{
-        padding-left: 240px;
-        min-height: 100%;
-        height: 100%;
-        margin-top: 5.5rem;
+        flex-direction: column !important;   
     }
+    #navbarContent{
+        width: 100%;
+        justify-content: start;
+        align-items: start;
+        margin-top: 3rem;
+    }
+    ul{
+        width: 100%;
+        margin: 0 0 0 0;
+        font-weight: bold;
+    }
+    .flex-lg-column{
+        min-height: 100vh;
+        padding: 0 !important;
+        margin-top:3rem;
+    }
+    .navbar-brand{
+        margin: auto;
+    }
+    #content-wrapper{
+        padding-left:200px;
+    }
+    .section{
+            min-height: 100vh;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+            padding-top: 145px;
+            padding-bottom: 80px;
+    }
+
+    
+
+
 }
