--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -59,14 +59,10 @@ form{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-bottom: 200px;
-    /* padding-top: 80px;
-    padding-bottom: 80px; */
 }
 .nav-link:hover{
     background-color: var(--active);
 }
-
 
 
 /* FOR DESKTOP VIEW */
@@ -90,6 +86,7 @@ form{
         width: 100%;
         margin: 0 0 0 0;
         font-weight: bold;
+        gap: 1rem;
     }
     .flex-lg-column{
         min-height: 100vh;
@@ -103,15 +100,15 @@ form{
         padding-left:200px;
     }
     .section{
+            width: 100%;
             min-height: 100vh;
             height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: start;
-            padding-top: 145px;
-            padding-bottom: 80px;
-    }
-
+            padding: 145px 0px 80px 0px;
+        }
+ 
     
 
 
